--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<version>5.0.0</version> <!-- Usa la versión que necesites -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version> <!-- Verifica que esta versión esté disponible o usa la última versión compatible -->
+		</dependency>
+
 
 
 		<dependency>
