--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=userAuth
 
 spring.datasource.url:jdbc:mysql://localhost:3306/userauth
 spring.datasource.username:root
-spring.datasource.password:
+spring.datasource.password:.Aa654321.
 spring.jpa.hibernate.ddl-auto=update
 driver-class-name=com.mysql.cj.jdbc.Driver
 
