--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=userAuth
 
-spring.datasource.url:jdbc:mysql://localhost:3306/userauth
-spring.datasource.username:root
-spring.datasource.password:.Aa654321.
+spring.datasource.url=jdbc:mysql://localhost:3306/userauth
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Clave secreta para firmar el token JWT
-application.security.jwt.secret-key=${JWT_SECRET}
+security.jwt.token.secret-key=aHuyjTg2#AoP#I1W&Pr79==8t5oa>t%B
+
+spring.main.web-application-type=servlet
+
+
+user.dir=C:\\Users\\Oven\\Desktop\\userAuth
