--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=userAuth
 spring.datasource.url=jdbc:mysql://localhost:3306/userauth
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Clave secreta para firmar el token JWT
