--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=userAuth
 
 spring.datasource.url=jdbc:mysql://localhost:3306/userauth
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.password=.Aa654321.
+spring.jpa.hibernate.ddl-auto=update
 driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Clave secreta para firmar el token JWT
